--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,44 @@
   background-color: #ffffff;
   padding: 24px;
   height: auto;
+  margin-bottom: 24px;
+}
+.main__contents-item:last-child {
+  margin-bottom: 0;
+}
+.emojibox__big {
+}
+.emojibox__tit {
+  font-weight: bold;
+}
+.emojibox__medium {
+}
+.emojibox__medium-tit {
+  font-weight: bold;
+}
+.emojibox__item-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.emojibox__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  border: 1px solid #aeaeae;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  width: 100px;
+  height: 100px;
+}
+.emojibox__item-emoji {
+  font-size: 1.7em;
+}
+.emojibox__item-name {
+}
+.emojibox__item-unicode {
+  margin-top: 5px;
 }
 /* ------------- */
 /* FOOTER */
