이모지 제목 스타일 추가

--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,9 @@
   width: 100px;
   height: 100px;
 }
+.emojibox__item:hover {
+  cursor: pointer;
+}
 .emojibox__item-emoji {
   font-size: 1.7em;
 }
