전체적인 스타일 변경

--- a/src/App.css
+++ b/src/App.css
@@ -35,22 +35,18 @@
 .emojibox__tit {
   font-weight: bold;
 }
-.emojibox__medium {
-}
-.emojibox__medium-tit {
-  font-weight: bold;
-}
 .emojibox__item-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
+/* emoji box */
 .emojibox__item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  border: 1px solid #aeaeae;
   margin-right: 5px;
   margin-bottom: 5px;
   width: 100px;
@@ -60,16 +56,42 @@
   cursor: pointer;
 }
 .emojibox__item-emoji {
-  font-size: 1.7em;
-}
-.emojibox__item-name {
-}
-.emojibox__item-unicode {
-  margin-top: 5px;
+  font-size: 2em;
 }
 /* ------------- */
 /* FOOTER */
 /* ------------- */
 .footer {
   text-align: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .emojibox__item-emoji {
+    font-size: 1.75em;
+  }
+}
+@media screen and (max-width: 720px) {
+  /* ------------- */
+  /* MAIN CONTENTS */
+  /* ------------- */
+  .main {
+    padding: 0 30px;
+  }
+  /* emoji box */
+  .emojibox__item {
+    width: 60px;
+    height: 60px;
+  }
+  /* emoji box - emoji */
+  .emojibox__item-emoji {
+    font-size: 1.5em;
+  }
+}
+@media screen and (max-width: 360px) {
+  /* ------------- */
+  /* MAIN CONTENTS */
+  /* ------------- */
+  .main {
+    padding: 0 10px;
+  }
 }
