--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,6 +8,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #000000d9;
   font-size: 18px;
+  height: 100%;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
 
 code {
@@ -17,15 +23,17 @@ code {
 
 .basic-layout-container {
   display: flex;
+  padding: 0;
+  margin: 0;
+  height: 100%;
 }
 /* Side */
 .side-container {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
   min-height: 100vh;
   height: 100%;
-  width: 300px;
+  width: 300px; /* 사이드 너비 */
   background-color: #001529;
   color: #ffffff;
 }
@@ -47,4 +55,52 @@ code {
 .side-container ul li:hover {
   background-color: #1890ff;
   cursor: pointer;
+}
+/* Main Container */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  width: calc(100vw - 300px - 30px); /* main container 너비 */
+  margin: 0;
+  margin-top: 80px; /* main container 높이 */
+  padding: 15px;
+  background-color: #f0f2f5;
+}
+.main-container-fill {
+  width: 100vw;
+}
+/* Header */
+header {
+  position: fixed;
+  right: 0;
+  top: 0;
+  margin: 0;
+  width: calc(100vw - 300px); /* 헤더 너비 */
+  height: 80px; /* 헤더 높이 */
+  box-sizing: border-box;
+  padding: 15px;
+  background-color: #ffffff;
+  display: flex;
+}
+header.header-fill {
+  width: 100vw;
+}
+
+.main-contents {
+  display: flex;
+  flex-wrap: wrap;
+  min-height: calc(100vh - 110px - 60px);
+  box-sizing: border-box;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  height: 60px;
+  font-size: 0.9rem;
 }
