--- a/gen_html/resources/index.css
+++ b/gen_html/resources/index.css
@@ -194,7 +194,7 @@ select {
 }
 
 /* Navigation */
-.nav {
+ul.nav {
   list-style: none;
   display: flex;
   flex: 1;
@@ -204,21 +204,21 @@ select {
   padding: 0;
   margin: 0;
 }
-.nav li {
+ul.nav li {
   display: flex;
   align-items: center;
   justify-content: center;
   line-height: 80px;
 }
-.nav li a {
+ul.nav li a {
   text-decoration: none;
   color: #ffffff;
   line-height: 80px;
-  padding: 0 10px;
+  padding: 0 20px;
   margin: 0;
   display: block;
 }
-.nav li a:hover {
+ul.nav li a:hover {
   transition: all 0.1s ease-in-out;
   background-color: #ffffff;
   color: [##_primary_color_##];
