--- a/gen_html/resources/index.css
+++ b/gen_html/resources/index.css
@@ -214,7 +214,8 @@ ul.nav li a {
   text-decoration: none;
   color: #ffffff;
   line-height: 80px;
-  padding: 0 20px;
+  padding: 0 15px;
+  font-size: 0.8em;
   margin: 0;
   display: block;
 }
