--- a/gen_html/resources/index.css
+++ b/gen_html/resources/index.css
@@ -203,6 +203,13 @@ ul.nav {
   height: 80px;
   padding: 0;
   margin: 0;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+ul.nav::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
 }
 ul.nav li {
   display: flex;
@@ -214,10 +221,11 @@ ul.nav li a {
   text-decoration: none;
   color: #ffffff;
   line-height: 80px;
-  padding: 0 15px;
   font-size: 0.8em;
   margin: 0;
   display: block;
+  width: 80px;
+  text-align: center;
 }
 ul.nav li a:hover {
   transition: all 0.1s ease-in-out;
