--- a/index.css
+++ b/index.css
@@ -319,3 +319,21 @@ ul.emoji-items li:hover {
   height: 60px;
   background-color: #e9ecef;
 }
+
+/* Alert */
+.alert {
+  position: fixed;
+  display: none;
+  flex-direction: column;
+  top: 20px;
+  right: 20px;
+  font-size: 0.9em;
+  background-color: #ffffff;
+  padding: 20px 30px;
+  box-shadow: 3px 3px 2px #495057;
+  border: 1px solid #f8f9fa;
+}
+.alert-tit {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
